--- a/worker/BUILD
+++ b/worker/BUILD
@@ -7,5 +7,8 @@ go_binary(
         "//demo:go_default_library",
         "//proto/config:go_default_library",
         "//proto/service/worker:go_default_library",
+        "@org_golang_google_grpc//codes:go_default_library",
+        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_x_net//context:go_default_library",
     ],
 )
