--- a/coordinator/BUILD
+++ b/coordinator/BUILD
@@ -1,10 +1,13 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
-go_binary(
-    name = "coordinator",
+go_library(
+    name = "go_default_library",
     srcs = ["coordinator.go"],
     deps = [
         "//proto/config:go_default_library",
+        "//proto/service/worker:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_x_net//context:go_default_library",
     ],
+    visibility = ["//visibility:public"],
 )
