--- a/demo/BUILD
+++ b/demo/BUILD
@@ -1,7 +1,13 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 
-go_library(
-    name = "go_default_library",
+go_binary(
+    name = "demo",
     srcs = ["demo.go"],
-    visibility = ["//visibility:public"],
+    deps = [
+        "//coordinator:go_default_library",
+        "//proto/config:go_default_library",
+        "//proto/service/worker:go_default_library",
+        "//worker:go_default_library",
+        "@org_golang_google_grpc//:go_default_library",
+    ],
 )
