--- a/demo/BUILD
+++ b/demo/BUILD
@@ -4,6 +4,7 @@ go_binary(
     name = "demo",
     srcs = ["demo.go"],
     deps = [
+        "//config:go_default_library",
         "//coordinator:go_default_library",
         "//proto/config:go_default_library",
         "//proto/service/worker:go_default_library",
