Implement the config loader, add some tests, use it as a proof of concept.

--- a/config/BUILD
+++ b/config/BUILD
@@ -5,6 +5,8 @@ go_library(
     srcs = ["loader.go"],
     deps = [
         "//proto/config:go_default_library",
+        "@com_github_golang_protobuf//jsonpb:go_default_library",
+        "@com_github_golang_protobuf//proto:go_default_library",
     ],
     visibility = ["//visibility:public"],
 )
