--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,19 @@ jdk:
 
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.8
     packages:
       - wget
+      - gcc-5
+      - g++-5
+      - clang-3.8
+      - clang++-3.8
 
 before_install:
   - wget 'https://github.com/bazelbuild/bazel/releases/download/0.4.0/bazel_0.4.0-linux-x86_64.deb'
+  - chmod +x bazel_0.4.0-linux-x86_64.deb
   - sudo dpkg -i bazel_0.4.0-linux-x86_64.deb
 
 script:
