--- a/coordinator/BUILD
+++ b/coordinator/BUILD
@@ -7,6 +7,7 @@ go_library(
         "//config:go_default_library",
         "//proto/config:go_default_library",
         "//proto/service/worker:go_default_library",
+        "@com_github_sirupsen_logrus//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_x_net//context:go_default_library",
     ],
