--- a/config/BUILD
+++ b/config/BUILD
@@ -7,6 +7,7 @@ go_library(
         "//proto/config:go_default_library",
         "@com_github_golang_protobuf//jsonpb:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
+        "@org_github_stretchr_testify//assert:go_default_library",
     ],
     visibility = ["//visibility:public"],
 )
