--- a/proto/config/BUILD
+++ b/proto/config/BUILD
@@ -3,6 +3,9 @@ load("@io_bazel_rules_go//proto:go_proto_library.bzl", "go_proto_library")
 go_proto_library(
     name = "go_default_library",
     srcs = ["config.proto"],
+    deps = [
+        "//proto/workspace:go_default_library"
+    ],
     visibility = ["//visibility:public"],
 )
 
