--- a/config/BUILD
+++ b/config/BUILD
@@ -7,7 +7,6 @@ go_library(
         "//proto/config:go_default_library",
         "@com_github_golang_protobuf//jsonpb:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
-        "@org_github_stretchr_testify//assert:go_default_library",
     ],
     visibility = ["//visibility:public"],
 )
@@ -16,5 +15,8 @@ go_test(
     name = "go_default_test",
     size = "small",
     srcs = ["loader_test.go"],
+    deps = [
+        "@org_github_stretchr_testify//assert:go_default_library",
+    ],
     library = ":go_default_library",
 )
