--- a/worker/scheduler/BUILD
+++ b/worker/scheduler/BUILD
@@ -2,11 +2,11 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["loader.go"],
+    srcs = ["scheduler.go"],
     deps = [
-        "//proto/config:go_default_library",
-        "@com_github_golang_protobuf//jsonpb:go_default_library",
-        "@com_github_golang_protobuf//proto:go_default_library",
+        "//proto/service/worker:go_default_library",
+        "//worker/bazel:go_default_library",
+        "@com_github_sirupsen_logrus//:go_default_library",
     ],
     visibility = ["//visibility:public"],
 )
@@ -14,9 +14,11 @@ go_library(
 go_test(
     name = "go_default_test",
     size = "small",
-    srcs = ["loader_test.go"],
+    srcs = glob(["*_test.go"]),
     deps = [
         "@com_github_stretchr_testify//assert:go_default_library",
+        "@com_github_stretchr_testify//mock:go_default_library",
     ],
     library = ":go_default_library",
 )
+
