--- a/proto/client/BUILD
+++ b/proto/client/BUILD
@@ -2,11 +2,10 @@ load("@io_bazel_rules_go//proto:go_proto_library.bzl", "go_proto_library")
 
 go_proto_library(
     name = "go_default_library",
-    srcs = ["coordinator.proto"],
+    srcs = ["client.proto"],
     deps = [
-        "//proto/workspace:go_default_library",
+        "//proto/workspace:go_default_library"
     ],
     visibility = ["//visibility:public"],
-    has_services = 1,
 )
 
