--- a/worker/scheduler/BUILD
+++ b/worker/scheduler/BUILD
@@ -7,7 +7,7 @@ go_library(
         "//bazel:go_default_library",
         "//proto/service/worker:go_default_library",
         "//proto/workspace:go_default_library",
-        "//worker/checkout:go_default_library",
+        "//repository:go_default_library",
         "@com_github_sirupsen_logrus//:go_default_library",
     ],
     visibility = ["//visibility:public"],
